--- a/G-protein-ligand.ipynb
+++ b/G-protein-ligand.ipynb
@@ -74,7 +74,7 @@
    ],
    "source": [
     "%%timeit\n",
-    "interchange['Electrostatics'].get_charges()\n",
+    "interchange[\"Electrostatics\"].get_charges()\n",
     "# 1a7716a191dfcfd5b2c0cbf9277deb0777a92916: 129 ms ± 1.59 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
     "# d51329a6da95f2a1a8ffd62f4376b4ed19ada1ba: 20.9 ms ± 753 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
     "# 9eecced577ebcc0cc762e6edf300085fc535c003: 20.1 ms ± 142 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)"
@@ -117,7 +117,7 @@
    ],
    "source": [
     "%%timeit\n",
-    "interchange['Electrostatics'].get_charges()\n",
+    "interchange[\"Electrostatics\"].get_charges()\n",
     "# 1a7716a191dfcfd5b2c0cbf9277deb0777a92916: 506 ms ± 4.14 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
     "# d51329a6da95f2a1a8ffd62f4376b4ed19ada1ba: 53.3 ms ± 1.5 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
     "# 9eecced577ebcc0cc762e6edf300085fc535c003: 53.3 ms ± 1.5 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)"
@@ -210,6 +210,7 @@
    "source": [
     "_zero_charge = unit.Quantity(0.0, unit.elementary_charge)\n",
     "\n",
+    "\n",
     "def zero_charge():\n",
     "    return _zero_charge"
    ]
@@ -234,7 +235,7 @@
     }
    ],
    "source": [
-    "interchange['Electrostatics'].potentials.keys()"
+    "interchange[\"Electrostatics\"].potentials.keys()"
    ]
   },
   {
@@ -255,7 +256,7 @@
    ],
    "source": [
     "%%timeit\n",
-    "interchange['Electrostatics'].get_charges()"
+    "interchange[\"Electrostatics\"].get_charges()"
    ]
   },
   {
@@ -281,11 +282,12 @@
    "source": [
     "_zero_charge = unit.Quantity(0.0, unit.elementary_charge)\n",
     "\n",
+    "\n",
     "def zero_charge():\n",
     "    return _zero_charge\n",
-    "x1 = defaultdict(\n",
-    "           lambda: unit.Quantity(0.0, unit.elementary_charge)\n",
-    "        )\n",
+    "\n",
+    "\n",
+    "x1 = defaultdict(lambda: unit.Quantity(0.0, unit.elementary_charge))\n",
     "x2 = {_: _zero_charge for _ in range(100_000)}"
    ]
   },
