Lint, update README

--- a/G-rdkit-ligand-modification.ipynb
+++ b/G-rdkit-ligand-modification.ipynb
@@ -27,10 +27,11 @@
    "outputs": [],
    "source": [
     "from openff.toolkit import Molecule, Topology, ForceField\n",
-    "orig_ligand = Molecule.from_file('inputs/PT2385.sdf')\n",
-    "orig_top = Topology.from_pdb('inputs/solvated_complex.pdb',\n",
-    "                       unique_molecules=[orig_ligand]\n",
-    "                       )\n",
+    "\n",
+    "orig_ligand = Molecule.from_file(\"inputs/PT2385.sdf\")\n",
+    "orig_top = Topology.from_pdb(\n",
+    "    \"inputs/solvated_complex.pdb\", unique_molecules=[orig_ligand]\n",
+    ")\n",
     "ff = ForceField(\"openff-2.0.0.offxml\", \"ff14sb_off_impropers_0.0.3.offxml\")"
    ]
   },
@@ -166,13 +167,12 @@
    "source": [
     "# Use RDKit's reaction handling to try mutating each aliphatic C-H bond to C-F\n",
     "import rdkit\n",
+    "\n",
     "rdmol = orig_ligand.to_rdkit()\n",
-    "rxn = rdkit.Chem.rdChemReactions.ReactionFromSmarts(\n",
-    "    '[C:1][H:2] >> [C:1][F:2]'\n",
-    ")\n",
+    "rxn = rdkit.Chem.rdChemReactions.ReactionFromSmarts(\"[C:1][H:2] >> [C:1][F:2]\")\n",
     "products = rxn.RunReactants([rdmol])\n",
     "sanitized_products = []\n",
-    "#mols_for_drawing = [rdmol]\n",
+    "# mols_for_drawing = [rdmol]\n",
     "\n",
     "for product in products:\n",
     "    mol_copy = rdkit.Chem.Mol(product[0])\n",
@@ -181,15 +181,15 @@
     "    rdkit.Chem.Kekulize(mol_copy, clearAromaticFlags=True)\n",
     "    rdkit.Chem.SetAromaticity(mol_copy, rdkit.Chem.AromaticityModel.AROMATICITY_MDL)\n",
     "    sanitized_products.append(mol_copy)\n",
-    "    \n",
-    "    # Prepare molecules to be drawn as a grid image. \n",
+    "\n",
+    "    # Prepare molecules to be drawn as a grid image.\n",
     "    # I don't like the 3D projections so I remove the conformers here.\n",
-    "    #mol_for_drawing = rdkit.Chem.Mol(mol_copy)\n",
-    "    #rdkit.Chem.rdchem.Mol.RemoveAllConformers(mol_for_drawing)\n",
-    "    #mols_for_drawing.append(mol_for_drawing)\n",
-    "    \n",
-    "#rdkit.Chem.Draw.MolsToGridImage(mols_for_drawing, \n",
-    "#                               molsPerRow=6)\n"
+    "    # mol_for_drawing = rdkit.Chem.Mol(mol_copy)\n",
+    "    # rdkit.Chem.rdchem.Mol.RemoveAllConformers(mol_for_drawing)\n",
+    "    # mols_for_drawing.append(mol_for_drawing)\n",
+    "\n",
+    "# rdkit.Chem.Draw.MolsToGridImage(mols_for_drawing,\n",
+    "#                               molsPerRow=6)"
    ]
   },
   {
@@ -214,8 +214,7 @@
     "        rdmols_for_drawing.append(san_prod)\n",
     "\n",
     "    else:\n",
-    "        print(f\"smiles is not unique: {smi}\")\n",
-    "        "
+    "        print(f\"smiles is not unique: {smi}\")"
    ]
   },
   {
@@ -237,13 +236,12 @@
     }
    ],
    "source": [
-    "# Prepare rdmols molecules to be drawn as a grid image. \n",
+    "# Prepare rdmols molecules to be drawn as a grid image.\n",
     "# I don't like the 3D projections so I remove the conformers here.\n",
     "\n",
     "for rdmol_for_drawing in rdmols_for_drawing:\n",
     "    rdkit.Chem.rdchem.Mol.RemoveAllConformers(rdmol_for_drawing)\n",
-    "rdkit.Chem.Draw.MolsToGridImage(rdmols_for_drawing, \n",
-    "                                molsPerRow=3)"
+    "rdkit.Chem.Draw.MolsToGridImage(rdmols_for_drawing, molsPerRow=3)"
    ]
   },
   {
@@ -270,8 +268,7 @@
     "\n",
     "for idx, unique_offmol in enumerate(unique_offmols):\n",
     "    print(f\"Making topology {idx+1}/{n_systems}\")\n",
-    "    this_top = Topology.from_molecules([*orig_top.molecules][:-1] +\n",
-    "                                       [unique_offmol])\n",
+    "    this_top = Topology.from_molecules([*orig_top.molecules][:-1] + [unique_offmol])\n",
     "    this_top.box_vectors = orig_top.box_vectors\n",
     "    pdb_filename = f\"topology{idx+1}.pdb\"\n",
     "    this_top.to_file(pdb_filename)\n",
@@ -290,9 +287,9 @@
     "    simulation = openmm.app.Simulation(this_top.to_openmm(), sys, integrator)\n",
     "    simulation.context.setPositions(this_top.get_positions().to_openmm())\n",
     "    simulation.minimizeEnergy(\n",
-    "    tolerance=openmm_unit.Quantity(\n",
-    "        value=50.0, unit=openmm_unit.kilojoule_per_mole / openmm_unit.nanometer\n",
-    "    )\n",
+    "        tolerance=openmm_unit.Quantity(\n",
+    "            value=50.0, unit=openmm_unit.kilojoule_per_mole / openmm_unit.nanometer\n",
+    "        )\n",
     "    )\n",
     "    print(f\"Simulating system {idx+1}/{n_systems}\")\n",
     "\n",
@@ -302,11 +299,13 @@
     "    simulation.reporters.append(dcd_reporter)\n",
     "    simulation.context.setVelocitiesToTemperature(300 * openmm_unit.kelvin)\n",
     "    simulation.runForClockTime(15 * openmm_unit.second)\n",
-    "    idx_to_sim[idx+1] = {\"topology\": this_top,\n",
-    "                         \"pdb_filename\": pdb_filename,\n",
-    "                         \"system\": sys,\n",
-    "                         \"simulation\": simulation,\n",
-    "                         \"trajectory\": traj_filename}"
+    "    idx_to_sim[idx + 1] = {\n",
+    "        \"topology\": this_top,\n",
+    "        \"pdb_filename\": pdb_filename,\n",
+    "        \"system\": sys,\n",
+    "        \"simulation\": simulation,\n",
+    "        \"trajectory\": traj_filename,\n",
+    "    }"
    ]
   },
   {
@@ -332,16 +331,15 @@
     "SIM_TO_VISUALIZE = 1\n",
     "\n",
     "trajectory: mdtraj.Trajectory = mdtraj.load(\n",
-    "    idx_to_sim[SIM_TO_VISUALIZE][\"trajectory\"], \n",
-    "    top = mdtraj.load(idx_to_sim[SIM_TO_VISUALIZE][\"pdb_filename\"]).topology\n",
+    "    idx_to_sim[SIM_TO_VISUALIZE][\"trajectory\"],\n",
+    "    top=mdtraj.load(idx_to_sim[SIM_TO_VISUALIZE][\"pdb_filename\"]).topology,\n",
     ")\n",
     "\n",
     "view = nglview.show_mdtraj(trajectory.image_molecules())\n",
     "view.add_representation(\"line\", selection=\"water\")\n",
-    "view.add_representation(\"hyperball\", \n",
-    "                        radiusSize=1, \n",
-    "                        radiusScale=0.5,\n",
-    "                        selection=\"not protein and not water\")\n",
+    "view.add_representation(\n",
+    "    \"hyperball\", radiusSize=1, radiusScale=0.5, selection=\"not protein and not water\"\n",
+    ")\n",
     "view"
    ]
   }
