--- a/G-rdkit-ligand-modification.ipynb
+++ b/G-rdkit-ligand-modification.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget https://raw.githubusercontent.com/openforcefield/2023-workshop-vignettes/master/colab_setup.ipynb\n",
+    "!wget -q https://raw.githubusercontent.com/openforcefield/2023-workshop-vignettes/master/colab_setup.ipynb\n",
     "%run colab_setup.ipynb"
    ]
   },
