--- a/G-protein-ligand.ipynb
+++ b/G-protein-ligand.ipynb
@@ -13,7 +13,16 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9494925",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%env INTERCHANGE_EXPERIMENTAL=1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6ee88ac1",
    "metadata": {},
