--- a/G-ligand-in-water.ipynb
+++ b/G-ligand-in-water.ipynb
@@ -8,7 +8,16 @@
    "outputs": [],
    "source": [
     "!wget -q https://raw.githubusercontent.com/openforcefield/2023-workshop-vignettes/main/colab_setup.ipynb\n",
-    "%run colab_setup.ipynb\n",
+    "%run colab_setup.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54449729",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%env LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CONDA_PREFIX/lib/"
    ]
   },
@@ -18,19 +27,7 @@
    "id": "d051f4a7-9a72-418b-b068-8d2e330a8db6",
    "metadata": {},
    "source": [
-    "# Solvating and equilibrating a ligand in a box of water\n",
-    "\n",
-    "<details>\n",
-    "    <summary><small>▼ Click here for dependency installation instructions</small></summary>\n",
-    "    The simplest way to install dependencies is to use the Interchange examples environment. From the root of the cloned openff-interchange repository:\n",
-    "    \n",
-    "    conda env create --name interchange-examples --file devtools/conda-envs/examples_env.yaml \n",
-    "    conda activate interchange-examples\n",
-    "    pip install -e .\n",
-    "    cd examples\n",
-    "    jupyter notebook ligand_in_water.ipynb\n",
-    "    \n",
-    "</details>"
+    "# Solvating and equilibrating a ligand in a box of water"
    ]
   },
   {
@@ -270,6 +267,20 @@
    "outputs": [],
    "source": [
     "run_simulation(simulation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60e15fdf",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "from openff.interchange.drivers.all import get_summary_data\n",
+    "\n",
+    "get_summary_data(interchange)"
    ]
   },
   {
