--- a/G-rdkit-ligand-modification.ipynb
+++ b/G-rdkit-ligand-modification.ipynb
@@ -12,6 +12,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d826f45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%env LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CONDA_PREFIX/lib/"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "461250f5",
@@ -239,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
