--- a/G-ligand-in-water.ipynb
+++ b/G-ligand-in-water.ipynb
@@ -44,13 +44,12 @@
     "import openmm\n",
     "import openmm.app\n",
     "import openmm.unit\n",
-    "from openff.toolkit import ForceField, Molecule, Topology\n",
-    "from openff.units import unit\n",
-    "from rich.pretty import pprint\n",
-    "\n",
     "from openff.interchange import Interchange\n",
     "from openff.interchange.components._packmol import pack_box\n",
-    "from openff.interchange.interop.openmm import to_openmm_positions"
+    "from openff.interchange.interop.openmm import to_openmm_positions\n",
+    "from openff.toolkit import ForceField, Molecule, Topology\n",
+    "from openff.units import unit\n",
+    "from rich.pretty import pprint"
    ]
   },
   {
