--- a/G-rdkit-ligand-modification.ipynb
+++ b/G-rdkit-ligand-modification.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from openff.toolkit import Molecule, Topology, ForceField\n",
+    "from openff.toolkit import ForceField, Molecule, Topology\n",
     "\n",
     "orig_ligand = Molecule.from_file(\"inputs/PT2385.sdf\")\n",
     "orig_top = Topology.from_pdb(\n",
